# ltmaOS

./: Cargo.toml  convert.py  debug.sh  emulate.sh
.cargo/: config
src/: main.rs
src/kernel/: allocator.rs  gdt.rs  interrupts.rs  memory.rs  mod.rs  vga.rs
src/kernel/interrupts/handlers/: double_fault.rs  keyboard.rs  mod.rs  page_fault.rs  syscall.rs  timer.rs
src/programs/: exec.rs  ls.rs  ltmaos_editor.rs  mod.rs  pwd.rs  shell.rs  touch.rs  write.rs
